Front-End Touch Ups + a bit of Back-end
- Fixed some front-end minor bugs.
- New design implementations for the website's aesthetic
- Added movie cast list on movie.php to match with the projects guidelines on the number of DB tables
- Initial set up of database and PHP backend code for login/register

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -24,7 +24,24 @@ a {
 	align-items: center;
 }
 
-.hidden {
-	display: none;
+.hidden { display: none; }
+
+.small-label, .label {
+	color: $ivory; 
+	font-weight: $bold;
+	text-transform: uppercase;
 }
+
+.small-label { font-size: 1.5rem; }
+
+.label { font-size: 2rem; }
+
+.error {
+	font-size: 1rem;
+	color: $red;
+	font-weight: $bold;
+}
+
+
+
 
