--- a/scss/_categories.scss
+++ b/scss/_categories.scss
@@ -1,6 +1,4 @@
 .list-box {
-    //margin: 2rem 3.4rem;
-    //flex-direction: column;
 
     .categ {
         width: 100%;
@@ -13,7 +11,6 @@
             border-radius: 1.5rem;
             text-align: center;
             transition: all 0.15s ease-in-out;
-            cursor: pointer;
             color: $ivory;
             text-transform: uppercase;
 
@@ -24,68 +21,13 @@
     }
 
     &_half {
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 2.6rem;
-        width: 100%;
-        padding: 2rem 3rem;
 
-        .label { 
-            color: $ivory;
-            font-size: 2rem;
-            font-weight: $bold;
-            text-transform: uppercase;
-        }
+        #discover { padding-top: 2rem; }
 
         .list {
-            display: flex;
-            gap: 1rem;
-            flex-wrap: wrap;
-
-            &_movie {
-                display: grid;
-                grid-template-rows: 80% 20%;
-                border-radius: 1rem;
-                width: 14.5rem;
-                height: 23rem;
-                margin-right: 5rem;
-
-                &_poster {
-                    position: relative;
-                    border-top-left-radius: 1.5rem;
-                    border-top-right-radius: 1.5rem;
-
-                    img {
-                        position: absolute;
-                        height: 125%;
-                        width: 120%;
-                        border-radius: 1.5rem;
-                        transition: all 0.5s ease-in-out;
-    
-                        &:hover {
-                            transform: scale(105%,105%) translate(0, -4.2rem);
-                            transition: all 0.5s ease-in-out;
-                        }
-                    }
-                }
-
-                &_info {
-                    font-weight: $bold;
-                    background-color: rgba(242, 241, 232, 0.7);
-                    flex-direction: column;
-                    text-align: center;
-                    width: 120%;
-                    border-bottom-left-radius: 1.5rem;
-                    border-bottom-right-radius: 1.5rem;
-
-                    .title {
-                        p {
-                            font-size: 1.2rem;
-                            color: $darkBlue;
-                        }
-                    }
-                }
-            }
+            row-gap: 2.5rem;
+            column-gap: 1rem;
+            flex-wrap: wrap;  
         }
     }
 }
