--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -53,7 +53,7 @@
 		border-radius: 2rem;
 	}
 
-	&_btn {
+	&_button {
 		transition: all 0.3s ease-in-out;
 
 		&:hover {
@@ -64,17 +64,28 @@
 	}
 
 	&_login {
-		background-color: $red;
-		color: $ivory;
-		border: 2px solid $red;
-		transition: all 100ms ease-in-out;
-	
-		&:hover {
-			background-color: $ivory;
-			color: $red;
-			transition: all 100ms ease-in-out;
-		}
-	}
+        background-color: $red;
+        color: $ivory;
+        border: 2px solid $red;
+        transition: all 100ms ease-in-out;
+    
+        &:hover {
+            background-color: transparent;
+            color: $red;
+        }
+    }
+
+    &_logout {
+        background-color: $ivory;
+        color: $red;
+        border: 2px solid $red;
+        transition: all 100ms ease-in-out;
+    
+        &:hover {
+            background-color: $red;
+            color: $ivory;
+        }
+    }
 }
 
 
