--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,4 @@
 @import "variables";
-@import "mixins";
 
 @import "global";
 @import "header";
@@ -9,4 +8,4 @@
 @import "watchlist";
 @import "movie";
 @import "categories";
-@import "ranking";
+@import "statistics";
