--- a/scss/style.css
+++ b/scss/style.css
@@ -13,7 +13,7 @@ html, body {
   width: 100%;
 }
 
-a {
+a, input, button {
   text-decoration: none;
   cursor: pointer;
 }
@@ -32,6 +32,178 @@ a {
 
 .hidden {
   display: none;
+}
+
+.small-label, .label {
+  color: #F2F1E8;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+.small-label {
+  font-size: 1.5rem;
+}
+
+.label {
+  font-size: 2rem;
+}
+
+.error {
+  font-size: 1rem;
+  color: #E34234;
+  font-weight: 600;
+}
+
+.like {
+  border-radius: 1.5rem;
+  padding: 0.3rem 0.5rem;
+  background-color: transparent;
+  font-weight: 600;
+  color: #F2F1E8;
+}
+
+.del {
+  border: 2px solid #E34234;
+  -webkit-transition: all 0.35s ease-in-out;
+  transition: all 0.35s ease-in-out;
+}
+
+.del:hover {
+  background-color: #E34234;
+}
+
+.add {
+  border: 2px solid #0D698B;
+  -webkit-transition: all 0.35s ease-in-out;
+  transition: all 0.35s ease-in-out;
+}
+
+.add:hover {
+  background-color: #0D698B;
+}
+
+.rate-btn {
+  border: 2px solid rgba(252, 226, 77, 0.942);
+  color: rgba(252, 226, 77, 0.942);
+  -webkit-transition: all 0.35s ease-in-out;
+  transition: all 0.35s ease-in-out;
+}
+
+.rate-btn:hover {
+  background-color: rgba(252, 226, 77, 0.942);
+  color: #050533;
+}
+
+.btns-form {
+  gap: 0.5rem;
+  margin-top: 0.5rem;
+}
+
+.footer {
+  margin: 3rem 0 2rem 0;
+}
+
+.footer_text {
+  color: #F2F1E8;
+  font-size: 0.8rem;
+}
+
+.modal:before {
+  content: "";
+  display: none;
+  background: rgba(0, 0, 0, 0.6);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 10;
+}
+
+.modal:target:before {
+  display: block;
+}
+
+.modal:target .modal-dialog {
+  top: 20%;
+}
+
+.modal-dialog {
+  padding: 0.5rem;
+  background: #F2F1E8;
+  border-radius: 1rem;
+  margin-left: -15%;
+  position: fixed;
+  left: 50%;
+  top: -100%;
+  z-index: 11;
+  width: 25rem;
+}
+
+.modal-body .star-cb-group {
+  gap: 1rem;
+}
+
+.modal-body .star-cb-group label {
+  font-size: 1.4rem;
+}
+
+.modal-body .star-cb-group input[type='radio'] {
+  -webkit-transform: scale(1.4);
+          transform: scale(1.4);
+}
+
+.modal-header,
+.modal-footer {
+  padding: 1.3rem 2rem;
+}
+
+.modal-header {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.modal-header h2, .modal-header a {
+  font-size: 1rem;
+}
+
+.modal-header .btn-close {
+  color: #050533;
+  font-size: 2rem;
+}
+
+.modal-footer {
+  text-align: right;
+}
+
+.modal-footer_btn {
+  background-color: #E34234;
+  border: 2px solid #E34234;
+  border-radius: 1.5rem;
+  padding: 0.7rem 1rem;
+  color: #F2F1E8;
+  font-weight: 600;
+  -webkit-transition: all 0.35s ease-in-out;
+  transition: all 0.35s ease-in-out;
+}
+
+.modal-footer_btn:hover {
+  background-color: transparent;
+  color: #E34234;
+}
+
+.delete {
+  background-color: transparent;
+  color: #E34234;
+  margin-right: 0.5rem;
+  -webkit-transition: all 0.35s ease-in-out;
+  transition: all 0.35s ease-in-out;
+}
+
+.delete:hover {
+  background-color: #E34234;
+  color: #F2F1E8;
 }
 
 .nav-bar {
@@ -110,12 +282,12 @@ a {
   border-radius: 2rem;
 }
 
-.menu_btn {
+.menu_button {
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
 
-.menu_btn:hover {
+.menu_button:hover {
   color: #F2F1E8;
   background-color: #050533;
   -webkit-transition: all 0.3s ease-in-out;
@@ -131,10 +303,21 @@ a {
 }
 
 .menu_login:hover {
+  background-color: transparent;
+  color: #E34234;
+}
+
+.menu_logout {
   background-color: #F2F1E8;
   color: #E34234;
+  border: 2px solid #E34234;
   -webkit-transition: all 100ms ease-in-out;
   transition: all 100ms ease-in-out;
+}
+
+.menu_logout:hover {
+  background-color: #E34234;
+  color: #F2F1E8;
 }
 
 .welcome-wrap .welcometxt {
@@ -240,13 +423,6 @@ a {
   border-radius: 1.5rem;
 }
 
-.wrapper .movie-box_half .label {
-  font-size: 1.5rem;
-  color: #F2F1E8;
-  font-weight: 600;
-  text-transform: uppercase;
-}
-
 .wrapper .movie-box_half .big-movie {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -258,18 +434,20 @@ a {
 }
 
 .wrapper .movie-box_half .big-movie_poster {
-  width: 70%;
+  width: 80%;
   height: 30rem;
 }
 
 .wrapper .movie-box_half .big-movie_poster img {
+  -o-object-fit: cover;
+     object-fit: cover;
   height: 100%;
   width: 100%;
   border-radius: 1.5rem;
 }
 
 .wrapper .movie-box_half .big-movie_info {
-  width: 70%;
+  width: 80%;
   height: 100%;
   position: absolute;
   -webkit-box-orient: vertical;
@@ -302,11 +480,6 @@ a {
 
 .wrapper .home-list-label {
   padding-bottom: 1rem;
-}
-
-.like {
-  width: 3.2rem;
-  height: 3.2rem;
 }
 
 .user-box {
@@ -389,14 +562,14 @@ a {
           flex-direction: column;
 }
 
-.list-box .showall {
+.list-box .showstats {
   width: 100%;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
 }
 
-.list-box .showall_btn {
+.list-box .showstats_btn {
   border: 2px solid #0D698B;
   padding: 0.9rem 1.5rem;
   border-radius: 1.5rem;
@@ -405,11 +578,10 @@ a {
       align-self: flex-end;
   -webkit-transition: all 0.15s ease-in-out;
   transition: all 0.15s ease-in-out;
-  cursor: pointer;
   color: #F2F1E8;
 }
 
-.list-box .showall_btn:hover {
+.list-box .showstats_btn:hover {
   background-color: #0D698B;
 }
 
@@ -432,7 +604,7 @@ a {
 }
 
 .list-box_half .mylist, .list-box_half .top5 {
-  padding-top: 0.7rem;
+  padding-top: 1.1rem;
 }
 
 .list-box_half .movie {
@@ -454,8 +626,8 @@ a {
 }
 
 .list-box_half .movie:hover .mov {
-  -webkit-transform: scale(105%, 105%) translate(0, -6.7rem);
-          transform: scale(105%, 105%) translate(0, -6.7rem);
+  -webkit-transform: scale(105%, 105%) translate(0, -7rem);
+          transform: scale(105%, 105%) translate(0, -7rem);
 }
 
 .list-box_half .movie_poster {
@@ -476,13 +648,16 @@ a {
 .list-box_half .movie_info {
   text-align: center;
   width: 120%;
-  background-color: rgba(242, 241, 232, 0.7);
+  background-color: rgba(212, 212, 212, 0.15);
   border-bottom-left-radius: 1.5rem;
   border-bottom-right-radius: 1.5rem;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 
 .list-box_half .movie_info_text {
@@ -491,16 +666,25 @@ a {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  padding: 1rem;
+  padding-left: 1rem;
 }
 
 .list-box_half .movie_info_text .title {
   font-size: 1.1rem;
-  color: #050533;
+  color: #F2F1E8;
 }
 
-.list-box_half .movie_info_potato {
-  padding: 1rem;
+.list-box_half .movie_info_text .rating {
+  color: #F2F1E8;
+  margin-top: 1rem;
+}
+
+.list-box_half .movie_info_btns {
+  padding-right: 1rem;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .container {
@@ -513,25 +697,47 @@ a {
   padding: 0 4rem;
 }
 
+.container #moviephp-title {
+  padding-top: 2rem;
+  font-size: 3rem;
+  text-align: center;
+}
+
+.container .moviephp-options .rating {
+  color: #F2F1E8;
+  font-size: 1.25rem;
+  margin-right: 5rem;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+.container .moviephp-options .add-movie_btns {
+  font-weight: 600;
+  gap: 2rem;
+}
+
+.container .moviephp-options .add-movie_btns .wl-wdl-wrap {
+  gap: 2rem;
+}
+
+.container .moviephp-options .add-movie_btns .wl-wdl-wrap .big {
+  padding: 0.6rem 1rem;
+}
+
 .container .movie {
-  margin: 2rem 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   width: 100%;
   gap: 6rem;
+  margin-bottom: 2rem;
 }
 
 .container .movie_poster {
-  border-radius: 1.5rem;
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
 }
 
 .container .movie_poster img {
-  height: 90%;
-  width: 100%;
+  width: 90%;
   border-radius: 1.5rem;
 }
 
@@ -543,52 +749,40 @@ a {
       -ms-flex-direction: column;
           flex-direction: column;
   gap: 2rem;
-  -webkit-box-flex: 1.8;
-      -ms-flex: 1.8;
-          flex: 1.8;
+  -webkit-box-flex: 1.9;
+      -ms-flex: 1.9;
+          flex: 1.9;
 }
 
 .container .movie_info > div {
   color: #F2F1E8;
 }
 
-.container .movie_info_title {
-  font-size: 1.9rem;
-}
-
-.container .movie_info_desc {
+.container .movie_info_desc, .container .movie_info_actors {
   line-height: 1.5rem;
   font-size: 1rem;
   text-align: justify;
-  border: 2px solid rgba(212, 212, 212, 0.15);
   border-radius: 1.5rem;
+}
+
+.container .movie_info_desc {
+  border: 2px solid rgba(212, 212, 212, 0.15);
   padding: 3rem;
 }
 
-.container .movie_info_options .rating {
+.container .movie_info_actors {
+  border: 2px solid rgba(212, 212, 212, 0.15);
+  padding: 1.5rem;
+}
+
+.container .movie_info_actors .cast {
+  font-weight: 800;
   color: #F2F1E8;
-  font-size: 1.1rem;
-  margin-right: 5rem;
-  text-transform: uppercase;
+  font-size: 1rem;
 }
 
-.container .movie_info_options .add-movie {
-  font-weight: 600;
-  cursor: pointer;
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-}
-
-.container .movie_info_options .add-movie input {
-  color: #F2F1E8;
-  border-radius: 1.5rem;
-  background-color: #0D698B;
-  border: 2px solid #0D698B;
-  padding: 0.8rem 1.4rem;
-}
-
-.container .movie_info_options .add-movie input:hover {
-  background-color: transparent;
+.container .review {
+  width: 100%;
 }
 
 .container .review_title {
@@ -604,6 +798,56 @@ a {
   background-color: rgba(212, 212, 212, 0.15);
   padding: 2rem;
   border-radius: 1.5rem;
+}
+
+.container .review_mine .review-not-loggedin {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1rem;
+}
+
+.container .review_mine .review-not-loggedin .message {
+  color: #F2F1E8;
+  font-size: 1.3rem;
+}
+
+.container .review_mine .top-info {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.container .review_mine .my-review {
+  color: #F2F1E8;
+  margin-bottom: 1rem;
+}
+
+.container .review_mine .right {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  gap: 1rem;
+}
+
+.container .review_mine .right .edit {
+  padding: 0 1rem;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+  border: 1px solid #E34234;
+  background-color: transparent;
+  border-radius: 1.5rem;
+  cursor: pointer;
+  font-weight: 600;
+  color: #F2F1E8;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+.container .review_mine .right .edit:hover {
+  background-color: #E34234;
 }
 
 .container .review_mine .username {
@@ -640,8 +884,16 @@ a {
   font-size: 1rem;
 }
 
-.container .review_mine .options_rate input {
-  background-color: transparent;
+.container .review_mine .options_rate_label {
+  font-size: 1rem;
+  color: #F2F1E8;
+  font-weight: 600;
+}
+
+.container .review_mine .options_rate_box {
+  margin-left: 0.5rem;
+  border-radius: 1.5rem;
+  padding: 0.2rem 0.4rem;
 }
 
 .container .review_mine .options_submit input {
@@ -681,13 +933,6 @@ a {
       -ms-flex-pack: justify;
           justify-content: space-between;
   margin-bottom: 1rem;
-  /*&_username {
-
-                    }
-
-                    &_rating {
-             
-                    }*/
 }
 
 .container .review_all_box .title div {
@@ -706,29 +951,62 @@ a {
 
 .list-box .categ {
   width: 100%;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  gap: 3rem;
+}
+
+.list-box .categ .selected {
+  background-color: #0D698B;
+}
+
+.list-box .categ_top-box {
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 2rem;
 }
 
 .list-box .categ_btn {
   border: 2px solid #0D698B;
-  padding: 0.9rem 1.5rem;
+  padding: 0.9rem 1.3rem;
   border-radius: 1.5rem;
   text-align: center;
   -webkit-transition: all 0.15s ease-in-out;
   transition: all 0.15s ease-in-out;
-  cursor: pointer;
   color: #F2F1E8;
   text-transform: uppercase;
+  background-color: transparent;
 }
 
 .list-box .categ_btn:hover {
   background-color: #0D698B;
 }
 
-.list-box_half {
+.list-box_half #discover {
+  padding-top: 2rem;
+}
+
+.list-box_half .list {
+  row-gap: 2.5rem;
+  -webkit-column-gap: 1rem;
+          column-gap: 1rem;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.stats-label {
+  font-size: 2.3rem;
+  text-align: center;
+}
+
+.stats-wrapper {
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  margin: 1.2rem 2rem;
+}
+
+.stats-wrapper .table-chart {
+  -webkit-box-flex: 1.2;
+      -ms-flex: 1.2;
+          flex: 1.2;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -736,79 +1014,101 @@ a {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
-  gap: 2.6rem;
-  width: 100%;
-  padding: 2rem 3rem;
 }
 
-.list-box_half .label {
+.stats-wrapper .bars-chart {
+  -webkit-box-flex: 2;
+      -ms-flex: 2;
+          flex: 2;
+}
+
+.stats-wrapper .rating-ranks {
+  margin-top: 2.7rem;
+}
+
+.stats-wrapper .rating-ranks h1, .stats-wrapper .rating-ranks h3 {
   color: #F2F1E8;
-  font-size: 2rem;
-  font-weight: 600;
+}
+
+.stats-wrapper .rating-ranks h3 {
+  font-size: 1.3rem;
+}
+
+.stats-wrapper .rating-ranks h1 {
+  font-size: 1.5rem;
   text-transform: uppercase;
 }
 
-.list-box_half .list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 1rem;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+.stats-wrapper .rating-ranks th {
+  padding: 1rem;
+  border: 2px solid rgba(212, 212, 212, 0.15);
+  text-transform: uppercase;
 }
 
-.list-box_half .list_movie {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-rows: 80% 20%;
-      grid-template-rows: 80% 20%;
-  border-radius: 1rem;
-  width: 14.5rem;
-  height: 23rem;
-  margin-right: 5rem;
+.stats-wrapper .rating-ranks td {
+  padding: 1rem;
+  background-color: rgba(212, 212, 212, 0.15);
+  font-size: 1.1rem;
 }
 
-.list-box_half .list_movie_poster {
-  position: relative;
-  border-top-left-radius: 1.5rem;
-  border-top-right-radius: 1.5rem;
-}
-
-.list-box_half .list_movie_poster img {
-  position: absolute;
-  height: 125%;
-  width: 120%;
-  border-radius: 1.5rem;
-  -webkit-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
-}
-
-.list-box_half .list_movie_poster img:hover {
-  -webkit-transform: scale(105%, 105%) translate(0, -4.2rem);
-          transform: scale(105%, 105%) translate(0, -4.2rem);
-  -webkit-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
-}
-
-.list-box_half .list_movie_info {
+.stats-wrapper .rating-ranks td, .stats-wrapper .rating-ranks th {
+  color: #F2F1E8;
+  border-radius: 0.5rem;
   font-weight: 600;
-  background-color: rgba(242, 241, 232, 0.7);
+  text-align: center;
+}
+
+.stats-wrapper .rating-ranks .categ-td {
+  border: 1px solid #E34234;
+  background-color: transparent;
+  font-size: 1rem;
+}
+
+.stats-wrapper .rating-ranks .bars {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  text-align: center;
-  width: 120%;
-  border-bottom-left-radius: 1.5rem;
+  gap: 1.5rem;
+}
+
+.stats-wrapper .rating-ranks .bars_each {
+  list-style-type: none;
+  width: 100%;
+}
+
+.stats-wrapper .rating-ranks .bars_each .bar {
+  height: 3rem;
+}
+
+.stats-wrapper .rating-ranks .bars_each .bar span {
+  height: 3rem;
+  float: left;
+  background: #0D698B;
   border-bottom-right-radius: 1.5rem;
+  border-top-right-radius: 1.5rem;
 }
 
-.list-box_half .list_movie_info .title p {
-  font-size: 1.2rem;
+.stats-wrapper .rating-ranks .bars_each .bar .rate-num {
+  float: right;
+}
+
+.stats-wrapper .rating-ranks .bars_each .bar .rate-num, .stats-wrapper .rating-ranks .bars_each .bar .rate-categ {
   color: #050533;
+  font-size: 1.2rem;
+  padding: 0.8rem 1rem 0 1rem;
+  font-weight: 600;
+  background-color: transparent;
 }
 
-.top5-ranking {
-  padding-top: 3.5rem;
+.stats-wrapper .rating-ranks .bars_each .bar_info {
+  gap: 1rem;
+  float: left;
+  margin-left: 1rem;
+  margin-top: 0.4rem;
+}
+
+.stats-wrapper .rating-ranks .bars_each .bar_info .rank {
+  font-size: 1.8rem;
 }
 /*# sourceMappingURL=style.css.map */
